# Encryptor-Installer

./: CMakeLists.txt  installer.cpp  installer.h  installer.ui  main.cpp
